<resources>

    <string name="app_name">Contrabook</string>
    <string name="action_settings">Settings</string>
    <string name="place_holder_text">Placeholder text</string>
    <string name="home_fragment">Home fragment</string>

    <string name="nav_menu_title_home">Home</string>
    <string name="nav_menu_title_explore">Explore</string>
    <string name="nav_menu_title_favourite">Favourites</string>
    <string name="nav_menu_title_settings">Settings</string>
    <string name="nav_menu_title_about">About</string>
    <string name="nav_menu_title_sub_menu">Sub menu</string>
    <string name="navigation_drawer_sub_menu_title">Sub menu</string>
    <string name="invalid_query_uri">Invalid query Uri: </string>
    <string name="database_insert_failed">Database insert failed</string>
    <string name="invalid_insert_uri">Invalid insert uri</string>
    <string name="invalid_update_uri">Invalid update uri</string>
    <string name="invalid_delete_uri">Invalid delete uri</string>
    <string name="drawer_open">Open drawer</string>
    <string name="drawer_close">Close drawer</string>
    <string name="hint_enter_name">Name required</string>
    <string name="hint_enter_address">Enter address</string>
    <string name="hint_enter_email">Enter email</string>
    <string name="hint_enter_phone">Enter phone number</string>
    <string name="hint_enter_url">Enter web address</string>
    <string name="action_title_edit">Edit</string>
    <string name="action_title_delete">Delete</string>
    <string name="dialog_negative_button_text">No</string>
    <string name="dialog_positive_button_text">OK</string>
    <string name="dialog_title_text">Are you sure you want to delete the item?</string>

</resources>
